k8s_sh/2_0904/pod_mysql1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-mysql
  labels:
    soma: mysql
spec:
  containers:
  - name: my-mysql
    image: mysql:5.7
    ports:
    - containerPort: 3307
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: NodePort
  ports:
  - name: mysql-port
    port: 3307
    targetPort: 3307
    nodePort: 30001
  selector:
    soma: mysql
