k8s_sh/2_0904/svc_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  type: LoadBalancer
  selector:
    hello: web
  ports:
  - name: http
    port: 80
    targetPort: 8000
