k8s_sh/2_0904/ingress_dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: my-dashboard.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
      - path: /metric
        pathType: Prefix
        backend:
          service:
            name: kubernetes-metrics-scraper
            port:
              number: 8080
